--- a/translation/pt/tutorial.po
+++ b/translation/pt/tutorial.po
@@ -12,10 +12,10 @@ msgstr ""
 "PO-Revision-Date: 2011-04-07 21:09+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Portuguese\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: tutorial.xml
@@ -79,7 +79,9 @@ msgid "Are you looking for trouble? Who is responsible for this mess!?!"
 msgstr ""
 
 #: tutorial.xml
-msgid "I almost had that damn ogre and suddenly someone's ripping out my guts who's not even near me!"
+msgid ""
+"I almost had that damn ogre and suddenly someone's ripping out my guts who's "
+"not even near me!"
 msgstr ""
 
 #: tutorial.xml
@@ -91,7 +93,9 @@ msgid "I'll show you the endurance capacities of magic squirters!"
 msgstr ""
 
 #: tutorial.xml
-msgid "What a disgusting ambiance. I did not desire to be here... and I had just found a nice and safe place. "
+msgid ""
+"What a disgusting ambiance. I did not desire to be here... and I had just "
+"found a nice and safe place. "
 msgstr ""
 
 #: tutorial.xml
@@ -103,15 +107,21 @@ msgid "No, Tolec. You must say that with much more authority."
 msgstr ""
 
 #: tutorial.xml
-msgid "It seems someone here has greater knowledge of how Harad is keeping me alive and moves me."
+msgid ""
+"It seems someone here has greater knowledge of how Harad is keeping me alive "
+"and moves me."
 msgstr ""
 
 #: tutorial.xml
-msgid "It seems someone here has greater knowledge of how Harad is keeping us alive and moves us."
+msgid ""
+"It seems someone here has greater knowledge of how Harad is keeping us alive "
+"and moves us."
 msgstr ""
 
 #: tutorial.xml
-msgid "Whoever the head honcho is here: He'd better know what he's gotten himself into."
+msgid ""
+"Whoever the head honcho is here: He'd better know what he's gotten himself "
+"into."
 msgstr ""
 
 #: tutorial.xml
@@ -119,11 +129,15 @@ msgid "Lots of money could appease me again."
 msgstr ""
 
 #: tutorial.xml
-msgid "Please excuse your somewhat unpleasant arrival. Lord Master Soren Windclaw requests your presence. ##solo"
+msgid ""
+"Please excuse your somewhat unpleasant arrival. Lord Master Soren Windclaw "
+"requests your presence. ##solo"
 msgstr ""
 
 #: tutorial.xml
-msgid "Please excuse your somewhat unpleasant arrival. Lord Master Soren Windclaw requests your presence."
+msgid ""
+"Please excuse your somewhat unpleasant arrival. Lord Master Soren Windclaw "
+"requests your presence."
 msgstr ""
 
 #: tutorial.xml
@@ -159,7 +173,9 @@ msgid "Are you kidding me? Who the hell is this windpaw?"
 msgstr ""
 
 #: tutorial.xml
-msgid "A splendid question! Short and precise. Maybe one can actually work with that one."
+msgid ""
+"A splendid question! Short and precise. Maybe one can actually work with "
+"that one."
 msgstr ""
 
 #: tutorial.xml
@@ -179,7 +195,9 @@ msgid "Spill it! Where are we, and who has the nerve to cross Branded Ones?!"
 msgstr ""
 
 #: tutorial.xml
-msgid "Well, the Lord Master has affirmed that he will explain everything in detail to you. ##solo"
+msgid ""
+"Well, the Lord Master has affirmed that he will explain everything in detail "
+"to you. ##solo"
 msgstr ""
 
 #: tutorial.xml
@@ -191,7 +209,9 @@ msgid "You shouldn't be able to pose a threat to us at the moment. ##solo"
 msgstr ""
 
 #: tutorial.xml
-msgid "Well, the Lord Master has affirmed that he will explain everything in detail to you."
+msgid ""
+"Well, the Lord Master has affirmed that he will explain everything in detail "
+"to you."
 msgstr ""
 
 #: tutorial.xml
@@ -223,11 +243,15 @@ msgid "This is not the right time to be impressed."
 msgstr ""
 
 #: tutorial.xml
-msgid "Fine. Now that that's clarified I'd like to ask you to surrender your weapons. ##solo"
+msgid ""
+"Fine. Now that that's clarified I'd like to ask you to surrender your "
+"weapons. ##solo"
 msgstr ""
 
 #: tutorial.xml
-msgid "Fine. Now that that's clarified I'd like to ask you all to surrender your weapons."
+msgid ""
+"Fine. Now that that's clarified I'd like to ask you all to surrender your "
+"weapons."
 msgstr ""
 
 #: tutorial.xml
@@ -255,7 +279,9 @@ msgid "What if we don't feel like surrendering our weapons?"
 msgstr ""
 
 #: tutorial.xml
-msgid "I'm very sorry, but before that we cannot release any of you of the safety area."
+msgid ""
+"I'm very sorry, but before that we cannot release any of you of the safety "
+"area."
 msgstr ""
 
 #: tutorial.xml
@@ -263,7 +289,9 @@ msgid "What if I don't feel like surrendering my weapons?"
 msgstr ""
 
 #: tutorial.xml
-msgid "I'm very sorry, but before that we cannot release you of the safety area. ##solo"
+msgid ""
+"I'm very sorry, but before that we cannot release you of the safety area. "
+"##solo"
 msgstr ""
 
 #: tutorial.xml
@@ -319,7 +347,8 @@ msgid "You will not leave it until you surrender your weapon. ##solo"
 msgstr ""
 
 #: tutorial.xml
-msgid "Just tell us by clicking on one of us, when you change your mind. ##solo"
+msgid ""
+"Just tell us by clicking on one of us, when you change your mind. ##solo"
 msgstr ""
 
 #: tutorial.xml
@@ -339,7 +368,10 @@ msgid "Follow me, please."
 msgstr ""
 
 #: tutorial.xml
-msgid "What's keeping you? Has the transport afflicted you so much that you don't even know how to walk anymore? Just click with the left mouse button at a place on the ground. Then it will all come back to you on its own."
+msgid ""
+"What's keeping you? Has the transport afflicted you so much that you don't "
+"even know how to walk anymore? Just click with the left mouse button at a "
+"place on the ground. Then it will all come back to you on its own."
 msgstr ""
 
 #: tutorial.xml
@@ -399,7 +431,9 @@ msgid "Size isn't everything."
 msgstr ""
 
 #: tutorial.xml
-msgid "Looks like a departure ticket to me. It can't be more painful than the arrival."
+msgid ""
+"Looks like a departure ticket to me. It can't be more painful than the "
+"arrival."
 msgstr ""
 
 #: tutorial.xml
@@ -411,7 +445,9 @@ msgid "What?"
 msgstr ""
 
 #: tutorial.xml
-msgid "The Lord Master Windclaw feared that you would kill yourself after your arrival in order to escape, so he took... measures."
+msgid ""
+"The Lord Master Windclaw feared that you would kill yourself after your "
+"arrival in order to escape, so he took... measures."
 msgstr ""
 
 #: tutorial.xml
@@ -439,7 +475,9 @@ msgid "So? I didn't wish for this ability."
 msgstr ""
 
 #: tutorial.xml
-msgid "Well, as you are now, you can only do that at places of great magical concentrations. In other words..."
+msgid ""
+"Well, as you are now, you can only do that at places of great magical "
+"concentrations. In other words..."
 msgstr ""
 
 #: tutorial.xml
@@ -467,7 +505,9 @@ msgid "It can't be all too healthy to be this smart."
 msgstr ""
 
 #: tutorial.xml
-msgid "Er, well, yes. Since the main way is currently blocked, we'll have to try to get through the enclosure with the new experiments."
+msgid ""
+"Er, well, yes. Since the main way is currently blocked, we'll have to try to "
+"get through the enclosure with the new experiments."
 msgstr ""
 
 #: tutorial.xml
@@ -475,7 +515,9 @@ msgid "There's a back door for feeding, and word is..."
 msgstr ""
 
 #: tutorial.xml
-msgid "... that the old Firewhirl has a secret door for a direct connection to the kitchen. That could work! But the beasts are not exactly without danger."
+msgid ""
+"... that the old Firewhirl has a secret door for a direct connection to the "
+"kitchen. That could work! But the beasts are not exactly without danger."
 msgstr ""
 
 #: tutorial.xml
@@ -483,15 +525,21 @@ msgid "It's only those sluglings."
 msgstr ""
 
 #: tutorial.xml
-msgid "I don't know... I don't feel like being bedridden for three weeks just because of some slimy fire breath."
+msgid ""
+"I don't know... I don't feel like being bedridden for three weeks just "
+"because of some slimy fire breath."
 msgstr ""
 
 #: tutorial.xml
-msgid "To Harad! That's impossible to put up with. Give us our weapons and we'll take care of that."
+msgid ""
+"To Harad! That's impossible to put up with. Give us our weapons and we'll "
+"take care of that."
 msgstr ""
 
 #: tutorial.xml
-msgid "To Harad! That's impossible to put up with. Give me my weapon and I'll take care of that."
+msgid ""
+"To Harad! That's impossible to put up with. Give me my weapon and I'll take "
+"care of that."
 msgstr ""
 
 #: tutorial.xml
@@ -499,7 +547,9 @@ msgid "Well, you're right about that..."
 msgstr ""
 
 #: tutorial.xml
-msgid "Yes. Considering the difficult circumstances we can do that, I guess. Here you go."
+msgid ""
+"Yes. Considering the difficult circumstances we can do that, I guess. Here "
+"you go."
 msgstr ""
 
 #: tutorial.xml
@@ -511,7 +561,9 @@ msgid "Where is my weapon?"
 msgstr ""
 
 #: tutorial.xml
-msgid "Er... Lord Master Windclaw feared that there could be a situation in which you had to fall back to, er, force of arms."
+msgid ""
+"Er... Lord Master Windclaw feared that there could be a situation in which "
+"you had to fall back to, er, force of arms."
 msgstr ""
 
 #: tutorial.xml
@@ -519,7 +571,8 @@ msgid "That's why he gave us these."
 msgstr ""
 
 #: tutorial.xml
-msgid "Surely you understand that you cannot run around here with unchecked weapons."
+msgid ""
+"Surely you understand that you cannot run around here with unchecked weapons."
 msgstr ""
 
 #: tutorial.xml
@@ -535,7 +588,9 @@ msgid "You... can still remember how to use a weapon, right?"
 msgstr ""
 
 #: tutorial.xml
-msgid "We were told that the first minutes are like one taking a step for the first time."
+msgid ""
+"We were told that the first minutes are like one taking a step for the first "
+"time."
 msgstr ""
 
 #: tutorial.xml
@@ -547,11 +602,13 @@ msgid "Explain inventory"
 msgstr ""
 
 #: tutorial.xml
-msgid "First you must open your inventory. By default, you do so with the 'i'-key."
+msgid ""
+"First you must open your inventory. By default, you do so with the 'i'-key."
 msgstr ""
 
 #: tutorial.xml
-msgid "Alternatively, you can click on the inventory button below in the status bar."
+msgid ""
+"Alternatively, you can click on the inventory button below in the status bar."
 msgstr ""
 
 #: tutorial.xml
@@ -559,11 +616,15 @@ msgid "In the inventory you'll see your items. They are ordered by their size."
 msgstr ""
 
 #: tutorial.xml
-msgid "The weapon you just obtained is a mid-sized item and thus is found in the middle field."
+msgid ""
+"The weapon you just obtained is a mid-sized item and thus is found in the "
+"middle field."
 msgstr ""
 
 #: tutorial.xml
-msgid "Click on the weapon with the left mouse button. Next click on the weapon field in the equipment above your inventory, and it will be equipped."
+msgid ""
+"Click on the weapon with the left mouse button. Next click on the weapon "
+"field in the equipment above your inventory, and it will be equipped."
 msgstr ""
 
 #: tutorial.xml
@@ -623,7 +684,8 @@ msgid "I just hope they have a soul."
 msgstr ""
 
 #: tutorial.xml
-msgid "Don't worry. Even a golem has one. Those things will not be the exception."
+msgid ""
+"Don't worry. Even a golem has one. Those things will not be the exception."
 msgstr ""
 
 #: tutorial.xml
@@ -651,11 +713,15 @@ msgid "Wait a sec, Derred. They somehow seem stronger."
 msgstr ""
 
 #: tutorial.xml
-msgid "Your witch stuff may have weakened me, but I take some of the power from every being I kill and become stronger."
+msgid ""
+"Your witch stuff may have weakened me, but I take some of the power from "
+"every being I kill and become stronger."
 msgstr ""
 
 #: tutorial.xml
-msgid "Your witch stuff may have weakened us, but we take some of the power from every being we kill and become stronger."
+msgid ""
+"Your witch stuff may have weakened us, but we take some of the power from "
+"every being we kill and become stronger."
 msgstr ""
 
 #: tutorial.xml
@@ -663,7 +729,9 @@ msgid "You'd better think about who you're calling `weakling' here!"
 msgstr ""
 
 #: tutorial.xml
-msgid "Hm, right. The Lord Master said that something like this could happen. Do you know how to convert this power into proper abilities?"
+msgid ""
+"Hm, right. The Lord Master said that something like this could happen. Do "
+"you know how to convert this power into proper abilities?"
 msgstr ""
 
 #: tutorial.xml
@@ -671,15 +739,21 @@ msgid "Explain level up"
 msgstr ""
 
 #: tutorial.xml
-msgid "You can upgrade your attributes every time, and sometimes you even have enough energy for a new skill. ##solo"
+msgid ""
+"You can upgrade your attributes every time, and sometimes you even have "
+"enough energy for a new skill. ##solo"
 msgstr ""
 
 #: tutorial.xml
-msgid "Yes. That was the thing with the big plus in the lower left corner. Just click on it and distribute your attribute points. ##solo"
+msgid ""
+"Yes. That was the thing with the big plus in the lower left corner. Just "
+"click on it and distribute your attribute points. ##solo"
 msgstr ""
 
 #: tutorial.xml
-msgid "Exactly. You can distribute the skill point in the skill window. The Lord Master said that you could choose from three categories. ##solo"
+msgid ""
+"Exactly. You can distribute the skill point in the skill window. The Lord "
+"Master said that you could choose from three categories. ##solo"
 msgstr ""
 
 #: tutorial.xml
@@ -687,15 +761,21 @@ msgid "Depending on your... character mass. ##solo"
 msgstr ""
 
 #: tutorial.xml
-msgid "You can upgrade your attributes every time, and sometimes you even have enough energy for a new skill."
+msgid ""
+"You can upgrade your attributes every time, and sometimes you even have "
+"enough energy for a new skill."
 msgstr ""
 
 #: tutorial.xml
-msgid "Yes. That was the thing with the big plus in the lower left corner. Just click on it and distribute your attribute points."
+msgid ""
+"Yes. That was the thing with the big plus in the lower left corner. Just "
+"click on it and distribute your attribute points."
 msgstr ""
 
 #: tutorial.xml
-msgid "Exactly. You can distribute the skill point in the skill window. The Lord Master said that you could choose from three categories."
+msgid ""
+"Exactly. You can distribute the skill point in the skill window. The Lord "
+"Master said that you could choose from three categories."
 msgstr ""
 
 #: tutorial.xml
@@ -747,7 +827,9 @@ msgid "More of those beasts?"
 msgstr ""
 
 #: tutorial.xml
-msgid "Urk! They seem to have broken out somehow. I hope they don't breed in the crevices."
+msgid ""
+"Urk! They seem to have broken out somehow. I hope they don't breed in the "
+"crevices."
 msgstr ""
 
 #: tutorial.xml
@@ -767,7 +849,9 @@ msgid "I don't waste my time crawling through kitchen corridors, Cursed One."
 msgstr ""
 
 #: tutorial.xml
-msgid "That's correct, Branded One. You wouldn't want to be called `harvest' now, would you?"
+msgid ""
+"That's correct, Branded One. You wouldn't want to be called `harvest' now, "
+"would you?"
 msgstr ""
 
 #: tutorial.xml
@@ -795,7 +879,9 @@ msgid "In fact, have you thought of using your powerful skills?"
 msgstr ""
 
 #: tutorial.xml
-msgid "The Lord Master thought that you could do considerably more than dully beat your enemies."
+msgid ""
+"The Lord Master thought that you could do considerably more than dully beat "
+"your enemies."
 msgstr ""
 
 #: tutorial.xml
@@ -811,11 +897,14 @@ msgid "Explain skills"
 msgstr ""
 
 #: tutorial.xml
-msgid "With the 't'-key you open the skill window. Here you can choose a skill."
+msgid ""
+"With the 't'-key you open the skill window. Here you can choose a skill."
 msgstr ""
 
 #: tutorial.xml
-msgid "Just click with the same mouse button you would like to use the skill with on the skill icon."
+msgid ""
+"Just click with the same mouse button you would like to use the skill with "
+"on the skill icon."
 msgstr ""
 
 #: tutorial.xml
@@ -823,11 +912,14 @@ msgid "Skills are distinguished into two groups."
 msgstr ""
 
 #: tutorial.xml
-msgid "After you have used a skill, you cannot use a skill of that group for a while."
+msgid ""
+"After you have used a skill, you cannot use a skill of that group for a "
+"while."
 msgstr ""
 
 #: tutorial.xml
-msgid "Look at the picture in the status bar to know if a skill is ready for use."
+msgid ""
+"Look at the picture in the status bar to know if a skill is ready for use."
 msgstr ""
 
 #: tutorial.xml
@@ -847,7 +939,9 @@ msgid "Wait a second. What if the old geezer has attached a trap to it?"
 msgstr ""
 
 #: tutorial.xml
-msgid "You're right. It's best if you do it, Branded One. At least nothing lasting can happen that way."
+msgid ""
+"You're right. It's best if you do it, Branded One. At least nothing lasting "
+"can happen that way."
 msgstr ""
 
 #: tutorial.xml
@@ -859,7 +953,9 @@ msgid "Open secret door"
 msgstr ""
 
 #: tutorial.xml
-msgid "Do you see the shelf in that passage? That is the door. Just move it by clicking on it."
+msgid ""
+"Do you see the shelf in that passage? That is the door. Just move it by "
+"clicking on it."
 msgstr ""
 
 #: tutorial.xml
@@ -875,11 +971,15 @@ msgid "Good, Firewhirl is not here."
 msgstr ""
 
 #: tutorial.xml
-msgid "What is he researching here all the time? All those flowers can hardly be for the purpose of the Council and Akeran."
+msgid ""
+"What is he researching here all the time? All those flowers can hardly be "
+"for the purpose of the Council and Akeran."
 msgstr ""
 
 #: tutorial.xml
-msgid "I'm sure there's more to it than meets the eye. An apple elemental for example."
+msgid ""
+"I'm sure there's more to it than meets the eye. An apple elemental for "
+"example."
 msgstr ""
 
 #: tutorial.xml
@@ -891,11 +991,15 @@ msgid "Joking aside! We must go on."
 msgstr ""
 
 #: tutorial.xml
-msgid "With all the damn beasts roaming around here freely, I almost think they just want me as an exterminator."
+msgid ""
+"With all the damn beasts roaming around here freely, I almost think they "
+"just want me as an exterminator."
 msgstr ""
 
 #: tutorial.xml
-msgid "With all the damn beasts roaming around here freely, I almost think they just want us as exterminators."
+msgid ""
+"With all the damn beasts roaming around here freely, I almost think they "
+"just want us as exterminators."
 msgstr ""
 
 #: tutorial.xml
@@ -919,7 +1023,8 @@ msgid "Windclaw, heretic!"
 msgstr ""
 
 #: tutorial.xml
-msgid "A Cursed One has to be happy if he has something to kill all along, right?"
+msgid ""
+"A Cursed One has to be happy if he has something to kill all along, right?"
 msgstr ""
 
 #: tutorial.xml
@@ -939,7 +1044,8 @@ msgid "I truly am the exterminator here."
 msgstr ""
 
 #: tutorial.xml
-msgid "Cursed Ones have to be happy if they have something to kill all along, right?"
+msgid ""
+"Cursed Ones have to be happy if they have something to kill all along, right?"
 msgstr ""
 
 #: tutorial.xml
@@ -983,6 +1089,7 @@ msgid "Philistine."
 msgstr ""
 
 #: tutorial.xml
-msgid "If they hadn't all those needless balustrades into the void, they wouldn't have to mop escaped sluglings from the floor."
+msgid ""
+"If they hadn't all those needless balustrades into the void, they wouldn't "
+"have to mop escaped sluglings from the floor."
 msgstr ""
-
