--- a/translation/de/sumwars.po
+++ b/translation/de/sumwars.po
@@ -1,13 +1,14 @@
 # German translations for sumwars package
 # Copyright (C) 2009
 # This file is distributed under the same license as the sumwars package.
-# kalimgard <kalimgard@users.sourceforge.net>, 2010.
+# kalimgard <kalimgard@users.sourceforge.net>, 2010., 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-12-14 \n"
+"PO-Revision-Date: 2011-05-19 12:06+0200\n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
 "Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
@@ -1405,9 +1406,8 @@ msgid "Armor class"
 msgstr "Rüstungsklasse"
 
 #: dwarfcastle.xml
-#, fuzzy
 msgid "Magic power"
-msgstr "Barbarische Kraft"
+msgstr ""
 
 #: dwarfcastle.xml
 msgid "Willpower"
@@ -1439,7 +1439,7 @@ msgstr "Geschick"
 
 #: dwarfcastle.xml
 msgid "Strength"
-msgstr ""
+msgstr "Stärke"
 
 #: dwarfcastle.xml
 msgid "Block"
@@ -3666,19 +3666,3 @@ msgstr "Alraune"
 #: npcStats.xml
 msgid "Peasant"
 msgstr "Bauer"
-
-#~ msgid "goblin_raid"
-#~ msgstr "Goblinüberfall"
-
-#~ msgid "Yes"
-#~ msgstr "Ja"
-
-#~ msgid "No"
-#~ msgstr "Nein"
-
-#~ msgid "Fundgegenstaende"
-#~ msgstr "Fundgegenstände"
-
-#, fuzzy
-#~ msgid "A blue potion?"
-#~ msgstr "Echotrank"
