--- a/translation/de/the_besieged_farm.po
+++ b/translation/de/the_besieged_farm.po
@@ -1,13 +1,14 @@
 # German translations for sumwars package
 # Copyright (C) 2009
 # This file is distributed under the same license as the sumwars package.
-# kalimgard <kalimgard@users.sourceforge.net>, 2010.
+# kalimgard <kalimgard@users.sourceforge.net>, 2010., 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-12-07 \n"
+"PO-Revision-Date: 2011-05-19 12:08+0200\n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
 "Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
@@ -29,7 +30,6 @@ msgstr ""
 "bezahlt. Was will man mehr?"
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "The peasants are rescued and the goblins slain. It's time to collect the "
 "reward for the trouble in Joringsbridge."
@@ -38,7 +38,6 @@ msgstr ""
 "die Muehen in Joringsbrueck abzuholen."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "The goblins around Bron's farm are not among the living anymore. I should "
 "knock at the door and make sure everything is all right. No peasants, no "
@@ -69,12 +68,10 @@ msgid "Ah! Are you feeling like earning the money after all?"
 msgstr "Ah! Habt ihr doch noch Lust bekommen, Euch das Gold zu verdienen?"
 
 #: besieged_farm.xml
-#, fuzzy
 msgid "Don't think I haven't seen you hanging around back there."
 msgstr "Glaubt ja nicht, ich habe Euch nicht dort herumlungern sehen."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "Don't think I haven't seen you and your friend hanging around back there."
 msgstr ""
@@ -82,7 +79,6 @@ msgstr ""
 "sehen."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "Don't think I haven't seen you and your friends hanging around back there."
 msgstr ""
@@ -102,7 +98,6 @@ msgstr ""
 "Goblins, die sich um Brons Hof herum aufhalten."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid "I don't care how you do it, even if you gobble them raw."
 msgstr ""
 "Wie Ihr das anstellt, ist mir egal, und wenn Ihr sie alle roh verschlingt."
@@ -112,12 +107,10 @@ msgid "Just kidding."
 msgstr "Nur ein Scherz."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid "When you're done, come back to me."
 msgstr "Wenn Ihr es geschafft habt, kommt Ihr zu mir zurueck."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid "I'm on my way."
 msgstr "Schon unterwegs."
 
@@ -193,7 +186,6 @@ msgid "I've already heard of it."
 msgstr "Hab ich schon gehört."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "Michel is in the tavern getting plastered - all in honor of your bravery, of "
 "course."
