--- a/translation/pt/maylons_grave.po
+++ b/translation/pt/maylons_grave.po
@@ -12,10 +12,10 @@ msgstr ""
 "PO-Revision-Date: 2011-04-07 21:09+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Portuguese\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: maylons_grave.xml
@@ -23,19 +23,29 @@ msgid "Maylons Grave"
 msgstr ""
 
 #: maylons_grave.xml
-msgid "Some necromancer really resurrected an old council mage. Probably to cause confusion behind the lines. At least one problem that is solved."
+msgid ""
+"Some necromancer really resurrected an old council mage. Probably to cause "
+"confusion behind the lines. At least one problem that is solved."
 msgstr ""
 
 #: maylons_grave.xml
-msgid "I came across some goblins in Maylon's Grave who babbled some nonsense and were chased by a zombie. Something is going on in this grave. Maybe I should have a look at it."
+msgid ""
+"I came across some goblins in Maylon's Grave who babbled some nonsense and "
+"were chased by a zombie. Something is going on in this grave. Maybe I should "
+"have a look at it."
 msgstr ""
 
 #: maylons_grave.xml
-msgid "I came across some goblins in Maylon's Grave. According to their shaman a necromancer animated some undead down in the crypt. I should take a look at it."
+msgid ""
+"I came across some goblins in Maylon's Grave. According to their shaman a "
+"necromancer animated some undead down in the crypt. I should take a look at "
+"it."
 msgstr ""
 
 #: maylons_grave.xml
-msgid "I came across some goblins in Maylon's Grave who were chased by a zombie. Something is going on in this grave. Maybe I should take a look at it."
+msgid ""
+"I came across some goblins in Maylon's Grave who were chased by a zombie. "
+"Something is going on in this grave. Maybe I should take a look at it."
 msgstr ""
 
 #: maylons_grave.xml
@@ -107,7 +117,9 @@ msgid "But last moon black human came."
 msgstr ""
 
 #: maylons_grave.xml
-msgid "Now horror of the depth wandering to surface, too and being after poor goblins who never not wants to steal anything."
+msgid ""
+"Now horror of the depth wandering to surface, too and being after poor "
+"goblins who never not wants to steal anything."
 msgstr ""
 
 #: maylons_grave.xml
@@ -127,11 +139,15 @@ msgid "Who knows what could happen?"
 msgstr ""
 
 #: maylons_grave.xml
-msgid "Really, I should free those poor bound souls and send them off to a short brake in Harad's Hell."
+msgid ""
+"Really, I should free those poor bound souls and send them off to a short "
+"brake in Harad's Hell."
 msgstr ""
 
 #: maylons_grave.xml
-msgid "Really, we should free those poor bound souls and send them off to a short brake in Harad's Hell."
+msgid ""
+"Really, we should free those poor bound souls and send them off to a short "
+"brake in Harad's Hell."
 msgstr ""
 
 #: maylons_grave.xml
@@ -143,11 +159,14 @@ msgid "Good warning, yes? Mighty warrior-humans let us live, no?"
 msgstr ""
 
 #: maylons_grave.xml
-msgid "Get lost. I have better things to do than killing a band of pathetic goblins."
+msgid ""
+"Get lost. I have better things to do than killing a band of pathetic goblins."
 msgstr ""
 
 #: maylons_grave.xml
-msgid "Get lost. we have better things to do than killing a band of pathetic goblins."
+msgid ""
+"Get lost. we have better things to do than killing a band of pathetic "
+"goblins."
 msgstr ""
 
 #: maylons_grave.xml
@@ -187,7 +206,9 @@ msgid "My sarcophagus contains many remains of my mortal life."
 msgstr ""
 
 #: maylons_grave.xml
-msgid "For a long time now I have no use for it anymore. Choose yourself a weapon you like."
+msgid ""
+"For a long time now I have no use for it anymore. Choose yourself a weapon "
+"you like."
 msgstr ""
 
 #: maylons_grave.xml
@@ -199,6 +220,7 @@ msgid "But now I have to return into the bliss of Akerans eternal oasis."
 msgstr ""
 
 #: maylons_grave.xml
-msgid "I wander if he would have said that if he had known that he will make a detour to Harad's Hell first?"
+msgid ""
+"I wander if he would have said that if he had known that he will make a "
+"detour to Harad's Hell first?"
 msgstr ""
-
