--- a/translation/pt/rob_the_robber.po
+++ b/translation/pt/rob_the_robber.po
@@ -12,10 +12,10 @@ msgstr ""
 "PO-Revision-Date: 2011-04-07 21:09+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Portuguese\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: rob_the_robber.xml
@@ -23,15 +23,23 @@ msgid "Rob the robber"
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "Rob the robber breathed his last and provided a downright windfall while he was on it."
+msgid ""
+"Rob the robber breathed his last and provided a downright windfall while he "
+"was on it."
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "Rob the robber is dead and will soon be forgotten. I have his neckband and I'm on my way to Dwarfenwall to show it to this sergeant Wober. I have no idea why everyone was so afraid of this guy."
+msgid ""
+"Rob the robber is dead and will soon be forgotten. I have his neckband and "
+"I'm on my way to Dwarfenwall to show it to this sergeant Wober. I have no "
+"idea why everyone was so afraid of this guy."
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "Rob the robber supposedly hides in the depth of the Fairywoods. Find him, dispose of him and take his neckband. At least it spares me the unsavory task of carrying a head around."
+msgid ""
+"Rob the robber supposedly hides in the depth of the Fairywoods. Find him, "
+"dispose of him and take his neckband. At least it spares me the unsavory "
+"task of carrying a head around."
 msgstr ""
 
 #: rob_the_robber.xml
@@ -43,7 +51,8 @@ msgid "Wanted poster"
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "I really should pay this guy a visit. 10000 gold pieces are not chickenfeed."
+msgid ""
+"I really should pay this guy a visit. 10000 gold pieces are not chickenfeed."
 msgstr ""
 
 #: rob_the_robber.xml
@@ -55,7 +64,8 @@ msgid "Excuse me, sergeant, but I noticed this wanted poster."
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "Isn't a bounty of 10000 gold pieces a little bit over the top for one man?"
+msgid ""
+"Isn't a bounty of 10000 gold pieces a little bit over the top for one man?"
 msgstr ""
 
 #: rob_the_robber.xml
@@ -67,7 +77,9 @@ msgid "The bounty hunters keep their fingers off him."
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "Every time someone wants to have killed him, he winds up dead a short time later himself."
+msgid ""
+"Every time someone wants to have killed him, he winds up dead a short time "
+"later himself."
 msgstr ""
 
 #: rob_the_robber.xml
@@ -115,11 +127,15 @@ msgid "Word is, he treasures it quite a lot."
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "If you can take it to sergeant Wober in Dwarfenwall he will believe you that Rob is dead."
+msgid ""
+"If you can take it to sergeant Wober in Dwarfenwall he will believe you that "
+"Rob is dead."
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "Right now we suspect him to be in the Fairywoods between here and Dwarvenwall."
+msgid ""
+"Right now we suspect him to be in the Fairywoods between here and "
+"Dwarvenwall."
 msgstr ""
 
 #: rob_the_robber.xml
@@ -143,7 +159,9 @@ msgid "You really got him?"
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "Better hope that the stories about him rising from his grave are just fairytales."
+msgid ""
+"Better hope that the stories about him rising from his grave are just "
+"fairytales."
 msgstr ""
 
 #: rob_the_robber.xml
@@ -171,7 +189,9 @@ msgid "If you can bring it to me I will believe you that Rob is dead."
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "Right now we suspect him to be in the Fairywoods between here and Joringsbridge."
+msgid ""
+"Right now we suspect him to be in the Fairywoods between here and "
+"Joringsbridge."
 msgstr ""
 
 #: rob_the_robber.xml
@@ -215,7 +235,8 @@ msgid "You talk too much!"
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "I will quarter and skin everyone of you, before I throw you to the wolves!"
+msgid ""
+"I will quarter and skin everyone of you, before I throw you to the wolves!"
 msgstr ""
 
 #: rob_the_robber.xml
@@ -223,10 +244,10 @@ msgid "You will die! I will destroy you!!"
 msgstr ""
 
 #: rob_the_robber.xml
-msgid "My soul will crawl out of it's grave and hunt you to the ends of the world!"
+msgid ""
+"My soul will crawl out of it's grave and hunt you to the ends of the world!"
 msgstr ""
 
 #: rob_the_robber.xml
 msgid "Have fun with that. If you escape hell, that is."
 msgstr ""
-
