--- a/translation/pt/the_besieged_farm.po
+++ b/translation/pt/the_besieged_farm.po
@@ -12,10 +12,10 @@ msgstr ""
 "PO-Revision-Date: 2011-04-07 21:09+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Portuguese\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: besieged_farm.xml
@@ -23,19 +23,28 @@ msgid "The besieged farm"
 msgstr ""
 
 #: besieged_farm.xml
-msgid "The peasants are rescued, the goblins slain, and the service paid. What more can you ask for?"
+msgid ""
+"The peasants are rescued, the goblins slain, and the service paid. What more "
+"can you ask for?"
 msgstr ""
 
 #: besieged_farm.xml
-msgid "The peasants are rescued and the goblins slain. It's time to collect the reward for the trouble in Joringsbridge."
+msgid ""
+"The peasants are rescued and the goblins slain. It's time to collect the "
+"reward for the trouble in Joringsbridge."
 msgstr ""
 
 #: besieged_farm.xml
-msgid "The goblins around Bron's farm are not among the living anymore. I should knock at the door and make sure everything is all right. No peasants, no money."
+msgid ""
+"The goblins around Bron's farm are not among the living anymore. I should "
+"knock at the door and make sure everything is all right. No peasants, no "
+"money."
 msgstr ""
 
 #: besieged_farm.xml
-msgid "The farm of a peasant named Michel Bron is besieged by goblins. His family needs help - fast."
+msgid ""
+"The farm of a peasant named Michel Bron is besieged by goblins. His family "
+"needs help - fast."
 msgstr ""
 
 #: besieged_farm.xml
@@ -55,11 +64,13 @@ msgid "Don't think I haven't seen you hanging around back there."
 msgstr ""
 
 #: besieged_farm.xml
-msgid "Don't think I haven't seen you and your friend hanging around back there."
+msgid ""
+"Don't think I haven't seen you and your friend hanging around back there."
 msgstr ""
 
 #: besieged_farm.xml
-msgid "Don't think I haven't seen you and your friends hanging around back there."
+msgid ""
+"Don't think I haven't seen you and your friends hanging around back there."
 msgstr ""
 
 #: besieged_farm.xml
@@ -67,7 +78,9 @@ msgid "But I don't want to complain."
 msgstr ""
 
 #: besieged_farm.xml
-msgid "You know the drill: Get to the Northern Meadow and drive away the goblins around Bron's farm."
+msgid ""
+"You know the drill: Get to the Northern Meadow and drive away the goblins "
+"around Bron's farm."
 msgstr ""
 
 #: besieged_farm.xml
@@ -91,7 +104,8 @@ msgid "aisNorthMeadow"
 msgstr ""
 
 #: besieged_farm.xml
-msgid "That should have been enough goblins. I better look after Bron's family."
+msgid ""
+"That should have been enough goblins. I better look after Bron's family."
 msgstr ""
 
 #: besieged_farm.xml
@@ -119,7 +133,9 @@ msgid "How so?"
 msgstr ""
 
 #: besieged_farm.xml
-msgid "With a crytal of Avearea, of course. It's been handed down in my family for generations."
+msgid ""
+"With a crytal of Avearea, of course. It's been handed down in my family for "
+"generations."
 msgstr ""
 
 #: besieged_farm.xml
@@ -127,7 +143,9 @@ msgid "Of course. Silly of me."
 msgstr ""
 
 #: besieged_farm.xml
-msgid "Really now, \"..name..\". Did you think she'd use carrier pigeons in this day and age?"
+msgid ""
+"Really now, \"..name..\". Did you think she'd use carrier pigeons in this "
+"day and age?"
 msgstr ""
 
 #: besieged_farm.xml
@@ -147,7 +165,9 @@ msgid "I've already heard of it."
 msgstr ""
 
 #: besieged_farm.xml
-msgid "Michel is in the tavern getting plastered - all in honor of your bravery, of course."
+msgid ""
+"Michel is in the tavern getting plastered - all in honor of your bravery, of "
+"course."
 msgstr ""
 
 #: besieged_farm.xml
@@ -157,4 +177,3 @@ msgstr ""
 #: besieged_farm.xml
 msgid "Here's the money."
 msgstr ""
-
